<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stage_troisieme</name>
  <version>1.0.0</version>
  <description>A package to discover robot basics</description>
  <maintainer email="olivier.kermorgant@ec.nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>simple_launch</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
